--- a/map.html
+++ b/map.html
@@ -48,7 +48,7 @@
 
     var marker = L.marker([9.01473, 38.78767]);
 
-    marker.bindPopup('Welcome To Ashewa Main Office location').openPopup();
+    marker.bindPopup('Location').openPopup();
     marker.addTo(map);
 
     //osm layer
